--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "faucet-pipeline-jsx": "2.1.6"
+    "faucet-pipeline-jsx": "2.1.6",
+    "faucet-pipeline-static": "1.2.0"
   },
   "dependencies": {
     "react": "16.13.1",
